# ball_socket_motor

./: .gitignore  CLAUDE.md  README.md  cad_attempt.py  cad_prototypes.ipynb  circuit_specs.ipynb  claude_sample.py  coil_creation.py  coil_equation.py  coil_param_optimizer.py  hello.py  magnet_designer.py  magnet_sweep.py  manual_2d_calibration.py  meep_grid_sim.py  prototype_half_sphere.py  pyproject.toml  todo.md  todo.txt
hw_testing/: magnetometer_reader.py  main_dispatcher.py  test_serial.py  visualize_magnetometer.py
hw_testing/i2c_scanner/: i2c_scanner.ino
hw_testing/magnetometer_reader/: README.md  magnetometer_reader.ino
sandbox/: rotation_test.py  simple.py
