[project]
name = "ball-socket-motor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "badcad",
    "cadquery>=2.5.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "magpylib>=5.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyvista>=0.44.2",
    "scipy>=1.13.1",
    "trimesh>=4.5.3",
]

[tool.uv.sources]
badcad = { git = "https://github.com/wrongbad/badcad.git" }
